# bevy_logic

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/shaders/: logic_gate_material.wgsl
examples/2d/: main.rs
examples/3d/: camera_rig.rs  gui.rs  main.rs  utils.rs  visual.rs
examples/3d/materials/: logic_gate_material.rs  mod.rs
examples/advanced_gates/: camera_rig.rs  main.rs  triangulation.rs  visual.rs
examples/cycles/: camera_rig.rs  main.rs  visual.rs
src/: camera_rig.rs  commands.rs  components.rs  cursor.rs  events.rs  lib.rs  main.rs  resources.rs  systems.rs  utils.rs
src/_logic/: mod.rs  sensors.rs  signal.rs
src/logic/: builder.rs  command_extensions.rs  commands.rs  gates.rs  mod.rs  schedule.rs  signal.rs
