[package]
name = "bevy_logic"
description = "A logic gate simulation plugin for Bevy."
version = "0.1.1"
authors = ["Jacob Bergholtz"]
homepage = "https://github.com/cuppachino/bevy_logic"
repository = "https://github.com/cuppachino/bevy_logic"
readme = "README.md"
keywords = ["bevy", "logic", "gate", "simulation", "circuit"]
categories = ["game-development", "simulation", "science"]
license = "MIT"
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_render",
] }
bevy-trait-query = "0.5.1"
derive-new = "0.6.0"
derive_more = "0.99.17"

[dev-dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24"
bevy_mod_picking = "0.18.2"
leafwing-input-manager = "0.13.3"


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
