[package]
name = "bevy_logic"
description = "A logic gate simulation plugin for Bevy."
version = "0.7.0"
authors = ["Jacob Bergholtz"]
homepage = "https://github.com/cuppachino/bevy_logic"
repository = "https://github.com/cuppachino/bevy_logic"
readme = "README.md"
keywords = ["bevy", "logic", "gate", "simulation", "circuit"]
categories = ["game-development", "simulation", "science"]
license = "MIT"
edition = "2021"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", default-features = false }
bevy-trait-query = "0.6.0"
petgraph = "0.6.5"

[dev-dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.27"
leafwing-input-manager = "0.14"
derive-new = "0.7.0"
itertools = "0.13.0"
i_float = "0.10.0"
i_overlay = "0.25.0"
i_triangle = "0.20.0"
i_shape = "0.16.0"


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
